--- a/resources/assets/sass/arklab/sass/about.scss
+++ b/resources/assets/sass/arklab/sass/about.scss
@@ -13,6 +13,7 @@ h* {
 	font-family: 'cwTeXHei', sans-serif;
 }
 
+$minHeight: 567px;
 
 html,body {
 	height: 100%;
@@ -35,6 +36,8 @@ section {
 #aboutCover {
 	height: 100%;
 	width: 100%;
+
+	min-height: $minHeight;
 
 	position: relative;
 	background: url(http://i.imgur.com/betF4w2.jpg) no-repeat center center fixed;
@@ -178,32 +181,23 @@ section {
 }
 
 #plansCover {
-	height: 100%;
+	height: 75%;
 	width: 100%;
 
 	position: relative;
-	background: #455a64 no-repeat center center fixed;
+	background: url(http://i.imgur.com/keavinx.png) no-repeat center center fixed;
 	@include background-size(cover);
 	color: white;
 
-	background: rgba(75,121,161,1);
-	background: -moz-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
-	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(75,121,161,1)), color-stop(100%, rgba(40,62,81,1)));
-	background: -webkit-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
-	background: -o-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
-	background: -ms-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
-	background: linear-gradient(135deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b79a1', endColorstr='#283e51', GradientType=1 );
-
-	min-height: 720px;
-
 	background-attachment: scroll;
+	min-height: 627px;
 
-	.progress {
-		background-color: #ef9a9a;
-		.determinate {
-			background-color: #d32f2f
-		}
+	.container {
+		color: white;
+	}
+
+	.page-mask {
+		background-color:  rgba(0, 0, 0, 0.2);
 	}
 }
 #lassCover {
@@ -217,6 +211,10 @@ section {
 
 	background-attachment: scroll;
 	min-height: 627px;
+
+	.page-mask {
+		background-color: rgba(0, 0, 0, 0.4);
+	}
 }
 
 #calendar {
@@ -254,7 +252,7 @@ section {
 }
 
 #flyProjectCover {
-	height: 100%;
+	height: 95%;
 	width: 100%;
 
 	position: relative;
@@ -263,7 +261,6 @@ section {
 	color: white;
 
 	background-attachment: scroll;
-	min-height: 627px;
 
 	.page-mask {
 		background-color: rgba(0, 0, 0, 0.4)
@@ -346,7 +343,7 @@ section {
 }
 
 #flyShowCover {
-	height: 100%;
+	height: 70%;
 	width: 100%;
 
 	background: url(http://i.imgur.com/OHaZai5.jpg) no-repeat center center fixed;
@@ -365,6 +362,23 @@ section {
 	.page-mask {
 		background-color: rgba(0, 0, 0, 0.1);
 	}
+}
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+	position: absolute;
+	top: 0;
+ 	left: 0;
+ 	width: 100%;
+ 	height: 100%;
 }
 
 #documentsCover {
