--- a/public/css/about.css
+++ b/public/css/about.css
@@ -25,12 +25,16 @@ h* {
   font-family: 'cwTeXHei', sans-serif;
 }
 
-/* line 18, ../../resources/assets/sass/arklab/sass/about.scss */
+@font-face {
+  font-family: HelveticaNeue;
+  src: url(HelveticaNeue-UltraLight.otf);
+}
+/* line 23, ../../resources/assets/sass/arklab/sass/about.scss */
 html, body {
   height: 100%;
 }
 
-/* line 22, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 27, ../../resources/assets/sass/arklab/sass/about.scss */
 .fadeIn {
   -webkit-animation-duration: 1000ms;
   -moz-animation-duration: 1000ms;
@@ -50,19 +54,19 @@ html, body {
   animation-name: fadeIn;
 }
 
-/* line 26, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 31, ../../resources/assets/sass/arklab/sass/about.scss */
 .page-mask {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-/* line 32, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 37, ../../resources/assets/sass/arklab/sass/about.scss */
 section {
   padding: 0 0 0 0;
 }
 
-/* line 36, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 41, ../../resources/assets/sass/arklab/sass/about.scss */
 #aboutCover {
   height: 100%;
   width: 100%;
@@ -77,7 +81,27 @@ section {
   background-attachment: scroll;
 }
 
-/* line 50, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 55, ../../resources/assets/sass/arklab/sass/about.scss */
+#productTrailerCover {
+  height: 100%;
+  width: 100%;
+  min-height: 567px;
+  position: relative;
+  background: url(http://i.imgur.com/suw6KJf.jpg) no-repeat center center fixed;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  color: white;
+  background-attachment: scroll;
+  min-height: 567px;
+}
+/* line 70, ../../resources/assets/sass/arklab/sass/about.scss */
+#productTrailerCover .container {
+  color: white;
+}
+
+/* line 77, ../../resources/assets/sass/arklab/sass/about.scss */
 #ark90Cover {
   height: 100%;
   width: 100%;
@@ -97,18 +121,18 @@ section {
   color: white;
   background-attachment: scroll;
 }
-/* line 68, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 95, ../../resources/assets/sass/arklab/sass/about.scss */
 #ark90Cover .container {
   color: #fafafa;
 }
-/* line 72, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 99, ../../resources/assets/sass/arklab/sass/about.scss */
 #ark90Cover h3 {
   background: -webkit-linear-gradient(#ece9e6, #ffffff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-/* line 79, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 106, ../../resources/assets/sass/arklab/sass/about.scss */
 #ark90Explode {
   height: 100%;
   width: 100%;
@@ -127,18 +151,18 @@ section {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#ffffff', GradientType=0 );
 }
 
-/* line 96, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 123, ../../resources/assets/sass/arklab/sass/about.scss */
 #ark90Details {
   width: 100%;
   position: relative;
 }
-/* line 100, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 127, ../../resources/assets/sass/arklab/sass/about.scss */
 #ark90Details .container {
   margin-top: 50px;
   margin-bottom: 50px;
 }
 
-/* line 106, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 133, ../../resources/assets/sass/arklab/sass/about.scss */
 #contacts {
   width: 100%;
   padding: 20px 20px 20px 20px;
@@ -160,15 +184,15 @@ section {
   background-attachment: scroll;
   font-size: 18px;
 }
-/* line 127, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 154, ../../resources/assets/sass/arklab/sass/about.scss */
 #contacts .container {
   color: white;
 }
-/* line 131, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 158, ../../resources/assets/sass/arklab/sass/about.scss */
 #contacts a {
   color: #01579b;
 }
-/* line 137, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 164, ../../resources/assets/sass/arklab/sass/about.scss */
 #contacts hr {
   display: block;
   height: 1px;
@@ -178,7 +202,7 @@ section {
   padding: 0;
 }
 
-/* line 147, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 174, ../../resources/assets/sass/arklab/sass/about.scss */
 #arkEduCover {
   height: 100%;
   width: 100%;
@@ -192,16 +216,16 @@ section {
   background-attachment: scroll;
   min-height: 627px;
 }
-/* line 159, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 186, ../../resources/assets/sass/arklab/sass/about.scss */
 #arkEduCover .container {
   color: white;
 }
-/* line 163, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 190, ../../resources/assets/sass/arklab/sass/about.scss */
 #arkEduCover .page-mask {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 169, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 196, ../../resources/assets/sass/arklab/sass/about.scss */
 #eduCover {
   height: 100%;
   width: 100%;
@@ -215,12 +239,12 @@ section {
   background-attachment: scroll;
   min-height: 627px;
 }
-/* line 181, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 208, ../../resources/assets/sass/arklab/sass/about.scss */
 #eduCover .page-mask {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 187, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 214, ../../resources/assets/sass/arklab/sass/about.scss */
 #plansCover {
   height: 75%;
   width: 100%;
@@ -234,16 +258,16 @@ section {
   background-attachment: scroll;
   min-height: 627px;
 }
-/* line 199, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 226, ../../resources/assets/sass/arklab/sass/about.scss */
 #plansCover .container {
   color: white;
 }
-/* line 203, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 230, ../../resources/assets/sass/arklab/sass/about.scss */
 #plansCover .page-mask {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-/* line 207, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 234, ../../resources/assets/sass/arklab/sass/about.scss */
 #lassCover {
   height: 100%;
   width: 100%;
@@ -257,12 +281,12 @@ section {
   background-attachment: scroll;
   min-height: 627px;
 }
-/* line 219, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 246, ../../resources/assets/sass/arklab/sass/about.scss */
 #lassCover .page-mask {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 224, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 251, ../../resources/assets/sass/arklab/sass/about.scss */
 #calendar {
   background-color: #283593;
   height: 100%;
@@ -282,7 +306,7 @@ section {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a80a5', endColorstr='#3a69aa', GradientType=1 );
 }
 
-/* line 246, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 273, ../../resources/assets/sass/arklab/sass/about.scss */
 #productsCover {
   height: 300px;
   width: 100%;
@@ -296,7 +320,7 @@ section {
   background-attachment: scroll;
 }
 
-/* line 258, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 285, ../../resources/assets/sass/arklab/sass/about.scss */
 #flyProjectCover {
   height: 95%;
   width: 100%;
@@ -309,16 +333,16 @@ section {
   color: white;
   background-attachment: scroll;
 }
-/* line 269, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 296, ../../resources/assets/sass/arklab/sass/about.scss */
 #flyProjectCover .page-mask {
   background-color: rgba(0, 0, 0, 0.4);
 }
-/* line 273, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 300, ../../resources/assets/sass/arklab/sass/about.scss */
 #flyProjectCover .container {
   color: white;
 }
 
-/* line 278, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 305, ../../resources/assets/sass/arklab/sass/about.scss */
 #envirnmentCover {
   height: 40%;
   width: 100%;
@@ -331,20 +355,20 @@ section {
   color: white;
   background-attachment: scroll;
 }
-/* line 289, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 316, ../../resources/assets/sass/arklab/sass/about.scss */
 #envirnmentCover .page-mask {
   background-color: transparent;
 }
-/* line 293, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 320, ../../resources/assets/sass/arklab/sass/about.scss */
 #envirnmentCover .container {
   color: white;
 }
-/* line 297, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 324, ../../resources/assets/sass/arklab/sass/about.scss */
 #envirnmentCover p {
   font-size: 18px;
 }
 
-/* line 302, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 329, ../../resources/assets/sass/arklab/sass/about.scss */
 #watchImage {
   height: 400px;
   width: 80%;
@@ -358,7 +382,7 @@ section {
   margin: 0 auto;
 }
 
-/* line 314, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 341, ../../resources/assets/sass/arklab/sass/about.scss */
 #topographyImage {
   height: 400px;
   width: 80%;
@@ -372,7 +396,7 @@ section {
   margin: 0 auto;
 }
 
-/* line 326, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 353, ../../resources/assets/sass/arklab/sass/about.scss */
 #aerialCover {
   height: 70%;
   width: 100%;
@@ -385,20 +409,20 @@ section {
   background-attachment: scroll;
   margin: 0 auto;
 }
-/* line 336, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 363, ../../resources/assets/sass/arklab/sass/about.scss */
 #aerialCover p {
   font-size: 18px;
 }
-/* line 340, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 367, ../../resources/assets/sass/arklab/sass/about.scss */
 #aerialCover .container {
   color: white;
 }
-/* line 344, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 371, ../../resources/assets/sass/arklab/sass/about.scss */
 #aerialCover .page-mask {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 349, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 376, ../../resources/assets/sass/arklab/sass/about.scss */
 #flyShowCover {
   height: 70%;
   width: 100%;
@@ -410,20 +434,20 @@ section {
   color: white;
   background-attachment: scroll;
 }
-/* line 358, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 385, ../../resources/assets/sass/arklab/sass/about.scss */
 #flyShowCover p {
   font-size: 18px;
 }
-/* line 362, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 389, ../../resources/assets/sass/arklab/sass/about.scss */
 #flyShowCover .container {
   color: white;
 }
-/* line 366, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 393, ../../resources/assets/sass/arklab/sass/about.scss */
 #flyShowCover .page-mask {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-/* line 371, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 398, ../../resources/assets/sass/arklab/sass/about.scss */
 .video-container {
   position: relative;
   padding-bottom: 56.25%;
@@ -432,7 +456,7 @@ section {
   overflow: hidden;
 }
 
-/* line 378, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 405, ../../resources/assets/sass/arklab/sass/about.scss */
 .video-container iframe,
 .video-container object,
 .video-container embed {
@@ -443,7 +467,7 @@ section {
   height: 100%;
 }
 
-/* line 388, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 415, ../../resources/assets/sass/arklab/sass/about.scss */
 #documentsCover {
   height: 300px;
   width: 100%;
@@ -457,13 +481,13 @@ section {
   background-attachment: scroll;
 }
 
-/* line 400, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 427, ../../resources/assets/sass/arklab/sass/about.scss */
 #mark {
   padding-left: 10px;
   padding-top: 10px;
 }
 
-/* line 405, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 432, ../../resources/assets/sass/arklab/sass/about.scss */
 .bottom {
   position: absolute;
   bottom: 0;
@@ -471,12 +495,12 @@ section {
   padding: 10px 10px 10px 10px;
 }
 
-/* line 412, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 439, ../../resources/assets/sass/arklab/sass/about.scss */
 .container {
   color: #455A64;
 }
 
-/* line 416, ../../resources/assets/sass/arklab/sass/about.scss */
+/* line 443, ../../resources/assets/sass/arklab/sass/about.scss */
 .collapsible-body {
   background-color: white;
 }
